--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot"
+    "start:dev": "webpack-dev-server --hot",
+    "start:prod": "webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
